# test-package

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
my_first_package/: __init__.py  core.py
